# bosdyn_msgs

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Earthfile  LICENSE  MODULE.bazel  Makefile  README.md  amd64-dpkg.txt  arm64-dpkg.txt  build.sh  jammy.yaml  package.xml  pip-constraint.txt  rosdep-skip.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yaml  cd.yml  ci.yml  mirror-release.yml  mirror.yml  release.yaml
.tooling/docker/amd64/: Dockerfile
.tooling/docker/arm64/: Dockerfile
.tooling/pip/: constraint.txt  pip.conf
.tooling/scripts/: install-bundle  rosdep2null
bosdyn_api_msgs/: BUILD.bazel  CMakeLists.txt  package.xml
bosdyn_api_msgs/bosdyn_api_msgs/: manual_conversions.py  math_helpers.py
bosdyn_api_msgs/config/: overlay.yaml
bosdyn_api_msgs/include/bosdyn_api_msgs/: manual_conversions.hpp
bosdyn_api_msgs/src/: manual_conversions.cpp
bosdyn_auto_return_api_msgs/: CMakeLists.txt  package.xml
bosdyn_auto_return_api_msgs/config/: overlay.yaml
bosdyn_autowalk_api_msgs/: CMakeLists.txt  package.xml
bosdyn_autowalk_api_msgs/config/: overlay.yaml
bosdyn_cmake_module/: CMakeLists.txt  bosdyn_cmake_module-extras.cmake  package.xml
bosdyn_cmake_module/cmake/: fetch_spot_sdk.cmake
bosdyn_cmake_module/cmake/templates/: bosdyn_cmake_module-extras.cmake.in  library_path.sh.in
bosdyn_graph_nav_api_msgs/: CMakeLists.txt  package.xml
bosdyn_graph_nav_api_msgs/config/: overlay.yaml
bosdyn_keepalive_api_msgs/: CMakeLists.txt  package.xml
bosdyn_keepalive_api_msgs/config/: overlay.yaml
bosdyn_log_status_api_msgs/: CMakeLists.txt  bosdyn_log_status_api_msgs-extras.cmake  package.xml
bosdyn_metrics_logging_api_msgs/: CMakeLists.txt  package.xml
bosdyn_metrics_logging_api_msgs/config/: overlay.yaml
bosdyn_mission_api_msgs/: CMakeLists.txt  package.xml
bosdyn_mission_api_msgs/config/: overlay.yaml
bosdyn_msgs/: CMakeLists.txt  package.xml  setup.py
bosdyn_msgs/bosdyn_msgs/: conversions.py
bosdyn_msgs/bosdyn_msgs/msg/: __init__.py
bosdyn_spot_api_msgs/: CMakeLists.txt  package.xml
bosdyn_spot_api_msgs/config/: overlay.yaml
bosdyn_spot_cam_api_msgs/: CMakeLists.txt  package.xml
bosdyn_spot_cam_api_msgs/config/: overlay.yaml
docker/amd64/: Dockerfile
docker/amd64/humble/: build.sh
docker/arm64/: Dockerfile
docker/arm64/humble/: build.sh
docker/common/: Dockerfile  entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bosdyn_msgs/share/bosdyn_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bosdyn_msgs/share/bosdyn_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  bosdyn_msgsConfig.cmake  bosdyn_msgs__rosidl_typesupport_cExport-noconfig.cmake  bosdyn_msgs__rosidl_typesupport_cExport.cmake  bosdyn_msgs__rosidl_typesupport_cppExport-noconfig.cmake  bosdyn_msgs__rosidl_typesupport_cppExport.cmake  bosdyn_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  bosdyn_msgs__rosidl_typesupport_introspection_cExport.cmake  bosdyn_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  bosdyn_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_bosdyn_msgs__rosidl_generator_cExport-noconfig.cmake  export_bosdyn_msgs__rosidl_generator_cExport.cmake  export_bosdyn_msgs__rosidl_generator_cppExport.cmake  export_bosdyn_msgs__rosidl_generator_pyExport-noconfig.cmake  export_bosdyn_msgs__rosidl_generator_pyExport.cmake  export_bosdyn_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_bosdyn_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_bosdyn_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_bosdyn_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/bosdyn_msgs/share/bosdyn_msgs/msg/: AcquireDataRequest.idl  AcquireDataResponse.idl  AcquireDataResponse.msg  AcquireDataResponseStatus.idl  AcquireDataResponseStatus.msg  AcquireLeaseRequest.idl  AcquireLeaseResponse.idl  AcquireLeaseResponseStatus.idl  AcquireLeaseResponseStatus.msg  AcquirePluginDataRequest.idl  AcquirePluginDataResponse.idl  AcquirePluginDataResponseStatus.idl  AcquisitionCapabilityList.idl  AcquisitionCapabilityList.msg  AcquisitionRequestList.idl  Action.idl  ActionAfter.idl  ActionAfterAutoReturn.idl  ActionAfterControlledMotorsOff.idl  ActionAfterImmediateRobotOff.idl  ActionAfterLeaseStale.idl  ActionAfterOneOfAction.idl  ActionAfterRecordEvent.idl  ActionDataAcquisition.idl  ActionIdQuery.idl  ActionIdQuery.msg  ActionOneOfAction.idl  ActionRemoteGrpc.idl  ActionRemoteGrpc.msg  ActionSleep.idl  (+1932 more)
log/: latest_build
msg/: AcquireDataRequest.msg  AcquireDataResponse.msg  AcquireLeaseRequest.msg  AcquireLeaseResponse.msg  AcquirePluginDataRequest.msg  AcquirePluginDataResponse.msg  AcquirePluginDataResponseStatus.msg  AcquisitionCapabilityList.msg  AcquisitionRequestList.msg  Action.msg  ActionAfter.msg  ActionAfterAutoReturn.msg  ActionAfterLeaseStale.msg  ActionAfterOneOfAction.msg  ActionAfterRecordEvent.msg  ActionDataAcquisition.msg  ActionOneOfAction.msg  ActionRemoteGrpc.msg  ActionWrapper.msg  ActionWrapperArmSensorPointing.msg  ActionWrapperGripperCameraParams.msg  ActionWrapperGripperCommand.msg  ActionWrapperSpotCamAlignment.msg  ActionWrapperSpotCamAlignmentAlignment.msg  ActionWrapperSpotCamAlignmentAlignmentOneOfReference.msg  AddLogAnnotationRequest.msg  AddLogAnnotationResponse.msg  AlertData.msg  AllowableOrientation.msg  AllowableOrientationOneOfConstraint.msg  AnchorHintUncertainty.msg  AnchorHintUncertaintyOneOfUncertainty.msg  AnchoredWorldObject.msg  Anchoring.msg  ApiGraspOverride.msg  ApiGraspOverrideOverride.msg  ApiGraspedCarryStateOverride.msg  AprilTagProperties.msg  Area.msg  AreaCallbackData.msg  (+771 more)
rules_bat/: extensions.bzl
(+20092 files in other folders)
