cmake_minimum_required(VERSION 3.8)
project(bosdyn_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(common_interfaces REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}

  "msg/AcquireDataRequest.msg"
  "msg/AcquireDataResponse.msg"
  "msg/AcquireDataResponseStatus.msg"
  "msg/AcquireLeaseRequest.msg"
  "msg/AcquireLeaseResponse.msg"
  "msg/AcquireLeaseResponseStatus.msg"
  "msg/AcquirePluginDataRequest.msg"
  "msg/AcquirePluginDataResponse.msg"
  "msg/AcquirePluginDataResponseStatus.msg"
  "msg/AcquisitionCapabilityList.msg"
  "msg/AcquisitionRequestList.msg"
  "msg/Action.msg"
  "msg/ActionAfter.msg"
  "msg/ActionAfterAutoReturn.msg"
  "msg/ActionAfterControlledMotorsOff.msg"
  "msg/ActionAfterImmediateRobotOff.msg"
  "msg/ActionAfterLeaseStale.msg"
  "msg/ActionAfterOneOfAction.msg"
  "msg/ActionAfterRecordEvent.msg"
  "msg/ActionDataAcquisition.msg"
  "msg/ActionIdQuery.msg"
  "msg/ActionOneOfAction.msg"
  "msg/ActionRemoteGrpc.msg"
  "msg/ActionSleep.msg"
  "msg/ActionWrapper.msg"
  "msg/ActionWrapperArmSensorPointing.msg"
  "msg/ActionWrapperGripperCameraParams.msg"
  "msg/ActionWrapperGripperCommand.msg"
  "msg/ActionWrapperRobotBodyPose.msg"
  "msg/ActionWrapperRobotBodySit.msg"
  "msg/ActionWrapperSpotCamAlignment.msg"
  "msg/ActionWrapperSpotCamAlignmentAlignment.msg"
  "msg/ActionWrapperSpotCamAlignmentAlignmentOneOfReference.msg"
  "msg/ActionWrapperSpotCamLed.msg"
  "msg/ActionWrapperSpotCamPtz.msg"
  "msg/AddLogAnnotationRequest.msg"
  "msg/AddLogAnnotationResponse.msg"
  "msg/AlertData.msg"
  "msg/AlertDataSeverityLevel.msg"
  "msg/AllowableOrientation.msg"
  "msg/AllowableOrientationOneOfConstraint.msg"
  "msg/Anchor.msg"
  "msg/AnchorHintUncertainty.msg"
  "msg/AnchorHintUncertaintyOneOfUncertainty.msg"
  "msg/AnchoredWorldObject.msg"
  "msg/Anchoring.msg"
  "msg/AnchoringHint.msg"
  "msg/AngularInterpolation.msg"
  "msg/AnnotationState.msg"
  "msg/AnswerQuestionRequest.msg"
  "msg/AnswerQuestionResponse.msg"
  "msg/AnswerQuestionResponseStatus.msg"
  "msg/ApiGraspOverride.msg"
  "msg/ApiGraspOverrideOverride.msg"
  "msg/ApiGraspOverrideRequest.msg"
  "msg/ApiGraspOverrideResponse.msg"
  "msg/ApiGraspedCarryStateOverride.msg"
  "msg/AprilTagProperties.msg"
  "msg/AprilTagPropertiesAprilTagPoseStatus.msg"
  "msg/Area.msg"
  "msg/AreaCallbackData.msg"
  "msg/AreaCallbackDoorConfig.msg"
  "msg/AreaCallbackError.msg"
  "msg/AreaCallbackErrorCallError.msg"
  "msg/AreaCallbackErrorOneOfResponseError.msg"
  "msg/AreaCallbackInformation.msg"
  "msg/AreaCallbackInformationRequest.msg"
  "msg/AreaCallbackInformationResponse.msg"
  "msg/AreaCallbackRegion.msg"
  "msg/AreaCallbackServiceError.msg"
  "msg/AreaI.msg"
  "msg/AreaIOneOfGeometry.msg"
  "msg/AreaOneOfGeometry.msg"
  "msg/ArmCartesianCommand.msg"
  "msg/ArmCartesianCommandFeedback.msg"
  "msg/ArmCartesianCommandFeedbackStatus.msg"
  "msg/ArmCartesianCommandRequest.msg"
  "msg/ArmCartesianCommandRequestAxisMode.msg"
  "msg/ArmCartesianCommandRequestOneOfJointConfiguration.msg"
  "msg/ArmCommand.msg"
  "msg/ArmCommandFeedback.msg"
  "msg/ArmCommandFeedbackOneOfFeedback.msg"
  "msg/ArmCommandRequest.msg"
  "msg/ArmCommandRequestOneOfCommand.msg"
  "msg/ArmDragCommand.msg"
  "msg/ArmDragCommandFeedback.msg"
  "msg/ArmDragCommandFeedbackStatus.msg"
  "msg/ArmDragCommandRequest.msg"
  "msg/ArmImpedanceCommand.msg"
  "msg/ArmImpedanceCommandFeedback.msg"
  "msg/ArmImpedanceCommandRequest.msg"
  "msg/ArmJointMoveCommand.msg"
  "msg/ArmJointMoveCommandFeedback.msg"
  "msg/ArmJointMoveCommandFeedbackPlannerStatus.msg"
  "msg/ArmJointMoveCommandFeedbackStatus.msg"
  "msg/ArmJointMoveCommandRequest.msg"
  "msg/ArmJointPosition.msg"
  "msg/ArmJointTrajectory.msg"
  "msg/ArmJointTrajectoryPoint.msg"
  "msg/ArmJointVelocity.msg"
  "msg/ArmParams.msg"
  "msg/ArmStopCommand.msg"
  "msg/ArmStopCommandFeedback.msg"
  "msg/ArmStopCommandRequest.msg"
  "msg/ArmSurfaceContact.msg"
  "msg/ArmSurfaceContactCommand.msg"
  "msg/ArmSurfaceContactFeedback.msg"
  "msg/ArmSurfaceContactRequest.msg"
  "msg/ArmSurfaceContactRequestAdmittanceSetting.msg"
  "msg/ArmSurfaceContactRequestAxisMode.msg"
  "msg/ArmSurfaceContactRequestOneOfJointConfiguration.msg"
  "msg/ArmSurfaceContactResponse.msg"
  "msg/ArmVelocityCommand.msg"
  "msg/ArmVelocityCommandCartesianVelocity.msg"
  "msg/ArmVelocityCommandCylindricalVelocity.msg"
  "msg/ArmVelocityCommandFeedback.msg"
  "msg/ArmVelocityCommandRequest.msg"
  "msg/ArmVelocityCommandRequestOneOfCommand.msg"
  "msg/AssociatedAlertData.msg"
  "msg/AssociatedMetadata.msg"
  "msg/Association.msg"
  "msg/AudioCaptureChannel.msg"
  "msg/AvailableModels.msg"
  "msg/BatteryChangePoseCommand.msg"
  "msg/BatteryChangePoseCommandFeedback.msg"
  "msg/BatteryChangePoseCommandFeedbackStatus.msg"
  "msg/BatteryChangePoseCommandRequest.msg"
  "msg/BatteryChangePoseCommandRequestDirectionHint.msg"
  "msg/BatteryMonitor.msg"
  "msg/BatteryState.msg"
  "msg/BatteryStateStatus.msg"
  "msg/BeginCallbackRequest.msg"
  "msg/BeginCallbackResponse.msg"
  "msg/BeginCallbackResponseStatus.msg"
  "msg/BeginControlRequest.msg"
  "msg/BeginControlResponse.msg"
  "msg/BeginControlResponseStatus.msg"
  "msg/BehaviorFault.msg"
  "msg/BehaviorFaultCause.msg"
  "msg/BehaviorFaultState.msg"
  "msg/BehaviorFaultStatus.msg"
  "msg/BlobPage.msg"
  "msg/BlobPages.msg"
  "msg/BlobSpec.msg"
  "msg/BodyControlParams.msg"
  "msg/BodyControlParamsBodyAssistForManipulation.msg"
  "msg/BodyControlParamsBodyPose.msg"
  "msg/BodyControlParamsOneOfParam.msg"
  "msg/BodyControlParamsRotationSetting.msg"
  "msg/BodyExternalForceParams.msg"
  "msg/BodyExternalForceParamsExternalForceIndicator.msg"
  "msg/BoolParam.msg"
  "msg/BoolParamSpec.msg"
  "msg/BosdynDockState.msg"
  "msg/BosdynGraphNavLocalize.msg"
  "msg/BosdynGraphNavState.msg"
  "msg/BosdynGripperCameraParamsState.msg"
  "msg/BosdynNavigateRoute.msg"
  "msg/BosdynNavigateTo.msg"
  "msg/BosdynPowerRequest.msg"
  "msg/BosdynRecordEvent.msg"
  "msg/BosdynRobotCommand.msg"
  "msg/BosdynRobotState.msg"
  "msg/BoundingBoxProperties.msg"
  "msg/Bounds.msg"
  "msg/Box2.msg"
  "msg/Box2WithFrame.msg"
  "msg/Box3.msg"
  "msg/Box3WithFrame.msg"
  "msg/Camera.msg"
  "msg/CameraCalibrationCommandRequest.msg"
  "msg/CameraCalibrationCommandRequestCommand.msg"
  "msg/CameraCalibrationCommandResponse.msg"
  "msg/CameraCalibrationFeedbackRequest.msg"
  "msg/CameraCalibrationFeedbackResponse.msg"
  "msg/CameraCalibrationFeedbackResponseStatus.msg"
  "msg/CameraOneOfIntrinsics.msg"
  "msg/CameraPinholeIntrinsics.msg"
  "msg/CameraSphericalLimits.msg"
  "msg/CancelAcquisitionRequest.msg"
  "msg/CancelAcquisitionResponse.msg"
  "msg/CancelAcquisitionResponseStatus.msg"
  "msg/CaptureActionId.msg"
  "msg/CaptureParameters.msg"
  "msg/CheckInRequest.msg"
  "msg/CheckInResponse.msg"
  "msg/CheckInResponseStatus.msg"
  "msg/Circle.msg"
  "msg/ClawGripperCommand.msg"
  "msg/ClawGripperCommandFeedback.msg"
  "msg/ClawGripperCommandFeedbackStatus.msg"
  "msg/ClawGripperCommandRequest.msg"
  "msg/ClearBITEventsRequest.msg"
  "msg/ClearBITEventsResponse.msg"
  "msg/ClearBehaviorFaultRequest.msg"
  "msg/ClearBehaviorFaultResponse.msg"
  "msg/ClearBehaviorFaultResponseStatus.msg"
  "msg/ClearBehaviorFaults.msg"
  "msg/ClearGraphRequest.msg"
  "msg/ClearGraphResponse.msg"
  "msg/ClearGraphResponseStatus.msg"
  "msg/ClearServiceFaultRequest.msg"
  "msg/ClearServiceFaultResponse.msg"
  "msg/ClearServiceFaultResponseStatus.msg"
  "msg/ClientMetadata.msg"
  "msg/CommonError.msg"
  "msg/CommonErrorCode.msg"
  "msg/CommsState.msg"
  "msg/CommsStateOneOfState.msg"
  "msg/CompileAutowalkRequest.msg"
  "msg/CompileAutowalkResponse.msg"
  "msg/CompileAutowalkResponseStatus.msg"
  "msg/Condition.msg"
  "msg/ConditionCompare.msg"
  "msg/ConditionHandleStaleness.msg"
  "msg/ConditionOperand.msg"
  "msg/ConditionOperandOneOfType.msg"
  "msg/ConfigRange.msg"
  "msg/ConfigureRequest.msg"
  "msg/ConfigureResponse.msg"
  "msg/ConfigureResponseStatus.msg"
  "msg/ConstantResult.msg"
  "msg/ConstantValue.msg"
  "msg/ConstantValueOneOfValue.msg"
  "msg/ConstrainedManipulationCommand.msg"
  "msg/ConstrainedManipulationCommandFeedback.msg"
  "msg/ConstrainedManipulationCommandFeedbackStatus.msg"
  "msg/ConstrainedManipulationCommandRequest.msg"
  "msg/ConstrainedManipulationCommandRequestControlMode.msg"
  "msg/ConstrainedManipulationCommandRequestOneOfTaskSpeed.msg"
  "msg/ConstrainedManipulationCommandRequestOneOfTaskTargetPosition.msg"
  "msg/ConstrainedManipulationCommandRequestTaskType.msg"
  "msg/CreateEdgeRequest.msg"
  "msg/CreateEdgeResponse.msg"
  "msg/CreateEdgeResponseStatus.msg"
  "msg/CreateWaypointRequest.msg"
  "msg/CreateWaypointResponse.msg"
  "msg/CreateWaypointResponseStatus.msg"
  "msg/CustomParam.msg"
  "msg/CustomParamCollection.msg"
  "msg/CustomParamError.msg"
  "msg/CustomParamErrorStatus.msg"
  "msg/CustomParamOneOfValue.msg"
  "msg/CustomParamSpec.msg"
  "msg/CustomParamSpecOneOfSpec.msg"
  "msg/CyclePowerRequest.msg"
  "msg/CyclePowerResponse.msg"
  "msg/CylindricalCoordinate.msg"
  "msg/DataAcquisition.msg"
  "msg/DataAcquisitionCapability.msg"
  "msg/DataAcquisitionCompletionBehavior.msg"
  "msg/DataAcquisitionOnInterruption.msg"
  "msg/DataBlob.msg"
  "msg/DataBufferStatus.msg"
  "msg/DataCapture.msg"
  "msg/DataChunk.msg"
  "msg/DataDescriptor.msg"
  "msg/DataError.msg"
  "msg/DataIdentifier.msg"
  "msg/DataIndex.msg"
  "msg/DataQuery.msg"
  "msg/DataQueryParams.msg"
  "msg/DataQueryParamsOneOfQuery.msg"
  "msg/DateToBlackboard.msg"
  "msg/DebugRequest.msg"
  "msg/DebugResponse.msg"
  "msg/DefineBlackboard.msg"
  "msg/DeleteDataPagesRequest.msg"
  "msg/DeleteDataPagesResponse.msg"
  "msg/DeletePageStatus.msg"
  "msg/DeletePageStatusStatus.msg"
  "msg/DeleteRequest.msg"
  "msg/DeleteResponse.msg"
  "msg/DeleteSoundRequest.msg"
  "msg/DeleteSoundResponse.msg"
  "msg/DepthPlaneSpotCheckResult.msg"
  "msg/DepthPlaneSpotCheckResultStatus.msg"
  "msg/DeregisterEstopEndpointRequest.msg"
  "msg/DeregisterEstopEndpointResponse.msg"
  "msg/DeregisterEstopEndpointResponseStatus.msg"
  "msg/DescriptorBlock.msg"
  "msg/DescriptorBlockOneOfDescriptorType.msg"
  "msg/DictParam.msg"
  "msg/DictParamSpec.msg"
  "msg/Dock.msg"
  "msg/DockProperties.msg"
  "msg/DockState.msg"
  "msg/DockStateDockedStatus.msg"
  "msg/DockStateLinkStatus.msg"
  "msg/DockType.msg"
  "msg/DockingCommandFeedbackRequest.msg"
  "msg/DockingCommandFeedbackResponse.msg"
  "msg/DockingCommandFeedbackResponseStatus.msg"
  "msg/DockingCommandRequest.msg"
  "msg/DockingCommandResponse.msg"
  "msg/DockingCommandResponseStatus.msg"
  "msg/DoorCommand.msg"
  "msg/DoorCommandAutoGraspCommand.msg"
  "msg/DoorCommandAutoPushCommand.msg"
  "msg/DoorCommandFeedback.msg"
  "msg/DoorCommandFeedbackStatus.msg"
  "msg/DoorCommandHandleType.msg"
  "msg/DoorCommandHingeSide.msg"
  "msg/DoorCommandRequest.msg"
  "msg/DoorCommandRequestOneOfCommand.msg"
  "msg/DoorCommandSwingDirection.msg"
  "msg/DoorCommandWarmstartCommand.msg"
  "msg/DoubleParam.msg"
  "msg/DoubleParamMinMax.msg"
  "msg/DoubleParamSpec.msg"
  "msg/DownloadEdgeSnapshotRequest.msg"
  "msg/DownloadEdgeSnapshotResponse.msg"
  "msg/DownloadEdgeSnapshotResponseStatus.msg"
  "msg/DownloadGraphRequest.msg"
  "msg/DownloadGraphResponse.msg"
  "msg/DownloadWaypointSnapshotRequest.msg"
  "msg/DownloadWaypointSnapshotResponse.msg"
  "msg/DownloadWaypointSnapshotResponseStatus.msg"
  "msg/DrawableArrow.msg"
  "msg/DrawableBox.msg"
  "msg/DrawableCapsule.msg"
  "msg/DrawableCylinder.msg"
  "msg/DrawableFrame.msg"
  "msg/DrawableLineStrip.msg"
  "msg/DrawablePoints.msg"
  "msg/DrawableProperties.msg"
  "msg/DrawablePropertiesColor.msg"
  "msg/DrawablePropertiesOneOfDrawable.msg"
  "msg/DrawableSphere.msg"
  "msg/EStopState.msg"
  "msg/EStopStateState.msg"
  "msg/EStopStateType.msg"
  "msg/Edge.msg"
  "msg/EdgeAnnotations.msg"
  "msg/EdgeAnnotationsDirectionConstraint.msg"
  "msg/EdgeAnnotationsGroundClutterAvoidanceMode.msg"
  "msg/EdgeAnnotationsPathFollowingMode.msg"
  "msg/EdgeAnnotationsStairData.msg"
  "msg/EdgeEdgeSource.msg"
  "msg/EdgeId.msg"
  "msg/EdgeSnapshot.msg"
  "msg/EdgeSnapshotStance.msg"
  "msg/Element.msg"
  "msg/ElementIdentifiers.msg"
  "msg/EnableCongestionControlRequest.msg"
  "msg/EnableCongestionControlResponse.msg"
  "msg/EndCallbackRequest.msg"
  "msg/EndCallbackResponse.msg"
  "msg/EndCallbackResponseStatus.msg"
  "msg/Endpoint.msg"
  "msg/EstablishSessionRequest.msg"
  "msg/EstablishSessionResponse.msg"
  "msg/EstablishSessionResponseStatus.msg"
  "msg/EstopCheckInRequest.msg"
  "msg/EstopCheckInResponse.msg"
  "msg/EstopCheckInResponseStatus.msg"
  "msg/EstopConfig.msg"
  "msg/EstopEndpoint.msg"
  "msg/EstopEndpointWithStatus.msg"
  "msg/EstopStopLevel.msg"
  "msg/EstopSystemStatus.msg"
  "msg/Event.msg"
  "msg/EventLevel.msg"
  "msg/EventLogPreserveHint.msg"
  "msg/EventSpec.msg"
  "msg/EventsComments.msg"
  "msg/EventsCommentsSpec.msg"
  "msg/FailedElement.msg"
  "msg/FailedNode.msg"
  "msg/FailureBehavior.msg"
  "msg/FailureBehaviorOneOfDefaultBehavior.msg"
  "msg/FailureBehaviorProceedIfAble.msg"
  "msg/FailureBehaviorReturnToStartAndTerminate.msg"
  "msg/FailureBehaviorReturnToStartAndTryAgainLater.msg"
  "msg/FailureBehaviorSafePowerOff.msg"
  "msg/FanPowerCommandFeedbackRequest.msg"
  "msg/FanPowerCommandFeedbackResponse.msg"
  "msg/FanPowerCommandFeedbackResponseStatus.msg"
  "msg/FanPowerCommandRequest.msg"
  "msg/FanPowerCommandResponse.msg"
  "msg/FanPowerCommandResponseStatus.msg"
  "msg/FileFormatDescriptor.msg"
  "msg/FileFormatDescriptorCheckSumType.msg"
  "msg/FileFormatVersion.msg"
  "msg/FileIndex.msg"
  "msg/FollowArmCommand.msg"
  "msg/FollowArmCommandFeedback.msg"
  "msg/FollowArmCommandRequest.msg"
  "msg/FootHeightCheckResult.msg"
  "msg/FootHeightCheckResultStatus.msg"
  "msg/FootState.msg"
  "msg/FootStateContact.msg"
  "msg/FootStateTerrainState.msg"
  "msg/ForDuration.msg"
  "msg/FormatBlackboard.msg"
  "msg/FrameTreeSnapshot.msg"
  "msg/FrameTreeSnapshotParentEdge.msg"
  "msg/FreezeCommand.msg"
  "msg/FreezeCommandFeedback.msg"
  "msg/FreezeCommandRequest.msg"
  "msg/FullBodyCommand.msg"
  "msg/FullBodyCommandFeedback.msg"
  "msg/FullBodyCommandFeedbackOneOfFeedback.msg"
  "msg/FullBodyCommandRequest.msg"
  "msg/FullBodyCommandRequestOneOfCommand.msg"
  "msg/GazeCommand.msg"
  "msg/GazeCommandFeedback.msg"
  "msg/GazeCommandFeedbackStatus.msg"
  "msg/GazeCommandRequest.msg"
  "msg/GetAudioCaptureChannelRequest.msg"
  "msg/GetAudioCaptureChannelResponse.msg"
  "msg/GetAudioCaptureGainRequest.msg"
  "msg/GetAudioCaptureGainResponse.msg"
  "msg/GetAuthTokenRequest.msg"
  "msg/GetAuthTokenResponse.msg"
  "msg/GetAuthTokenResponseStatus.msg"
  "msg/GetBITStatusRequest.msg"
  "msg/GetBITStatusResponse.msg"
  "msg/GetBITStatusResponseDegradation.msg"
  "msg/GetBITStatusResponseDegradationDegradationType.msg"
  "msg/GetConfigurationRequest.msg"
  "msg/GetConfigurationResponse.msg"
  "msg/GetDataBufferStatusRequest.msg"
  "msg/GetDataBufferStatusResponse.msg"
  "msg/GetDataIndexRequest.msg"
  "msg/GetDataIndexResponse.msg"
  "msg/GetDataPagesRequest.msg"
  "msg/GetDataPagesResponse.msg"
  "msg/GetDockingConfigRequest.msg"
  "msg/GetDockingConfigResponse.msg"
  "msg/GetDockingStateRequest.msg"
  "msg/GetDockingStateResponse.msg"
  "msg/GetEstopConfigRequest.msg"
  "msg/GetEstopConfigResponse.msg"
  "msg/GetEstopSystemStatusRequest.msg"
  "msg/GetEstopSystemStatusResponse.msg"
  "msg/GetEventsCommentsRequest.msg"
  "msg/GetEventsCommentsResponse.msg"
  "msg/GetFeatureEnabledRequest.msg"
  "msg/GetFeatureEnabledResponse.msg"
  "msg/GetICEConfigurationRequest.msg"
  "msg/GetICEConfigurationResponse.msg"
  "msg/GetImageRequest.msg"
  "msg/GetImageResponse.msg"
  "msg/GetInfoRequest.msg"
  "msg/GetInfoResponse.msg"
  "msg/GetIrColormapRequest.msg"
  "msg/GetIrColormapResponse.msg"
  "msg/GetIrMeterOverlayRequest.msg"
  "msg/GetIrMeterOverlayResponse.msg"
  "msg/GetLEDBrightnessRequest.msg"
  "msg/GetLEDBrightnessResponse.msg"
  "msg/GetLicenseInfoRequest.msg"
  "msg/GetLicenseInfoResponse.msg"
  "msg/GetLocalGridTypesRequest.msg"
  "msg/GetLocalGridTypesResponse.msg"
  "msg/GetLocalGridsRequest.msg"
  "msg/GetLocalGridsResponse.msg"
  "msg/GetLocalizationStateRequest.msg"
  "msg/GetLocalizationStateResponse.msg"
  "msg/GetMissionRequest.msg"
  "msg/GetMissionResponse.msg"
  "msg/GetNetworkSettingsRequest.msg"
  "msg/GetNetworkSettingsResponse.msg"
  "msg/GetPayloadAuthTokenRequest.msg"
  "msg/GetPayloadAuthTokenResponse.msg"
  "msg/GetPayloadAuthTokenResponseStatus.msg"
  "msg/GetPointCloudRequest.msg"
  "msg/GetPointCloudResponse.msg"
  "msg/GetPowerStatusRequest.msg"
  "msg/GetPowerStatusResponse.msg"
  "msg/GetPtzFocusStateRequest.msg"
  "msg/GetPtzFocusStateResponse.msg"
  "msg/GetPtzPositionRequest.msg"
  "msg/GetPtzPositionResponse.msg"
  "msg/GetPtzVelocityRequest.msg"
  "msg/GetPtzVelocityResponse.msg"
  "msg/GetRecordStatusRequest.msg"
  "msg/GetRecordStatusResponse.msg"
  "msg/GetRecordStatusResponseMapState.msg"
  "msg/GetRecordStatusResponseStatus.msg"
  "msg/GetSSLCertRequest.msg"
  "msg/GetSSLCertResponse.msg"
  "msg/GetScreenRequest.msg"
  "msg/GetScreenResponse.msg"
  "msg/GetServiceEntryRequest.msg"
  "msg/GetServiceEntryResponse.msg"
  "msg/GetServiceEntryResponseStatus.msg"
  "msg/GetServiceInfoRequest.msg"
  "msg/GetServiceInfoResponse.msg"
  "msg/GetSoftwareVersionRequest.msg"
  "msg/GetSoftwareVersionResponse.msg"
  "msg/GetStateRequest.msg"
  "msg/GetStateRequestOneOfLowerBound.msg"
  "msg/GetStateResponse.msg"
  "msg/GetStatusRequest.msg"
  "msg/GetStatusResponse.msg"
  "msg/GetStatusResponseStatus.msg"
  "msg/GetStreamParamsRequest.msg"
  "msg/GetStreamParamsResponse.msg"
  "msg/GetSystemLogRequest.msg"
  "msg/GetSystemLogResponse.msg"
  "msg/GetTemperatureRequest.msg"
  "msg/GetTemperatureResponse.msg"
  "msg/GetVisibleCamerasRequest.msg"
  "msg/GetVisibleCamerasResponse.msg"
  "msg/GetVisibleCamerasResponseStream.msg"
  "msg/GetVisibleCamerasResponseStreamWindow.msg"
  "msg/GetVolumeRequest.msg"
  "msg/GetVolumeResponse.msg"
  "msg/GlobalParameters.msg"
  "msg/Graph.msg"
  "msg/GraspParams.msg"
  "msg/GraspPositionConstraint.msg"
  "msg/GripperCameraGetParamRequest.msg"
  "msg/GripperCameraGetParamResponse.msg"
  "msg/GripperCameraParamRequest.msg"
  "msg/GripperCameraParamResponse.msg"
  "msg/GripperCameraParams.msg"
  "msg/GripperCameraParamsCameraMode.msg"
  "msg/GripperCameraParamsLedMode.msg"
  "msg/GripperCommand.msg"
  "msg/GripperCommandFeedback.msg"
  "msg/GripperCommandFeedbackOneOfCommand.msg"
  "msg/GripperCommandRequest.msg"
  "msg/GripperCommandRequestOneOfCommand.msg"
  "msg/GrpcPages.msg"
  "msg/GrpcSpec.msg"
  "msg/HardwareConfiguration.msg"
  "msg/HdrParameters.msg"
  "msg/HipRangeOfMotionResult.msg"
  "msg/HipRangeOfMotionResultError.msg"
  "msg/ICEServer.msg"
  "msg/ICEServerAuthParams.msg"
  "msg/ICEServerAuthParamsOauthPair.msg"
  "msg/ICEServerAuthParamsOneOfCredential.msg"
  "msg/ICEServerIcetransport.msg"
  "msg/ICEServerServertype.msg"
  "msg/IREnableDisableRequest.msg"
  "msg/IREnableDisableRequestRequest.msg"
  "msg/IREnableDisableResponse.msg"
  "msg/Image.msg"
  "msg/ImageAcquisitionCapability.msg"
  "msg/ImageCapture.msg"
  "msg/ImageFormat.msg"
  "msg/ImagePixelFormat.msg"
  "msg/ImageProperties.msg"
  "msg/ImagePropertiesOneOfImageData.msg"
  "msg/ImageRequest.msg"
  "msg/ImageResponse.msg"
  "msg/ImageResponseStatus.msg"
  "msg/ImageSource.msg"
  "msg/ImageSourceAndService.msg"
  "msg/ImageSourceAndServiceOneOfRequestData.msg"
  "msg/ImageSourceCapture.msg"
  "msg/ImageSourceImageType.msg"
  "msg/ImageSourceOneOfCameraModels.msg"
  "msg/ImageSourcePinholeModel.msg"
  "msg/ImageSourcePinholeModelCameraIntrinsics.msg"
  "msg/InitializeLensRequest.msg"
  "msg/InitializeLensResponse.msg"
  "msg/Int64Param.msg"
  "msg/Int64ParamMinMax.msg"
  "msg/Int64ParamSpec.msg"
  "msg/IrColorMap.msg"
  "msg/IrColorMapColorMap.msg"
  "msg/IrColorMapScalingPair.msg"
  "msg/IrMeterOverlay.msg"
  "msg/IrMeterOverlayDeltaPair.msg"
  "msg/IrMeterOverlayNormalizedCoordinates.msg"
  "msg/IrMeterOverlayTempUnit.msg"
  "msg/IrMeterOverlayTempUnitTempUnitType.msg"
  "msg/JointKinematicCheckResult.msg"
  "msg/JointKinematicCheckResultError.msg"
  "msg/JointLimits.msg"
  "msg/JointState.msg"
  "msg/KeyInt32ValueBosdynMsgsFailedElement.msg"
  "msg/KeyInt32ValueBosdynMsgsNode.msg"
  "msg/KeyInt32ValueFloat32.msg"
  "msg/KeyStringValueBool.msg"
  "msg/KeyStringValueBosdynMsgsAreaCallbackData.msg"
  "msg/KeyStringValueBosdynMsgsAreaCallbackError.msg"
  "msg/KeyStringValueBosdynMsgsAreaCallbackRegion.msg"
  "msg/KeyStringValueBosdynMsgsCustomParam.msg"
  "msg/KeyStringValueBosdynMsgsCustomParamSpec.msg"
  "msg/KeyStringValueBosdynMsgsDepthPlaneSpotCheckResult.msg"
  "msg/KeyStringValueBosdynMsgsFrameTreeSnapshotParentEdge.msg"
  "msg/KeyStringValueBosdynMsgsHipRangeOfMotionResult.msg"
  "msg/KeyStringValueBosdynMsgsJointKinematicCheckResult.msg"
  "msg/KeyStringValueBosdynMsgsLoadCellSpotCheckResult.msg"
  "msg/KeyStringValueBosdynMsgsNavigationFeedbackResponseActiveRegionInformation.msg"
  "msg/KeyStringValueBosdynMsgsOutputData.msg"
  "msg/KeyStringValueBosdynMsgsOutputImage.msg"
  "msg/KeyStringValueBosdynMsgsServiceFaultSeverity.msg"
  "msg/KeyStringValueBosdynMsgsSystemFaultSeverity.msg"
  "msg/KeyStringValueBosdynMsgsValue.msg"
  "msg/KeyStringValueBosdynMsgsVec2.msg"
  "msg/KeyStringValueString.msg"
  "msg/KeyStringValueUint64.msg"
  "msg/KeyValue.msg"
  "msg/Keypoint.msg"
  "msg/KeypointMatches.msg"
  "msg/KeypointSet.msg"
  "msg/KeypointSetKeypointType.msg"
  "msg/KinematicState.msg"
  "msg/Lease.msg"
  "msg/LeaseOwner.msg"
  "msg/LeaseResource.msg"
  "msg/LeaseUseResult.msg"
  "msg/LeaseUseResultStatus.msg"
  "msg/LegPairCheckResult.msg"
  "msg/LegPairCheckResultStatus.msg"
  "msg/LicenseInfo.msg"
  "msg/LicenseInfoStatus.msg"
  "msg/ListAvailableModelsRequest.msg"
  "msg/ListAvailableModelsResponse.msg"
  "msg/ListAvailableModelsStatus.msg"
  "msg/ListCamerasRequest.msg"
  "msg/ListCamerasResponse.msg"
  "msg/ListCaptureActionsRequest.msg"
  "msg/ListCaptureActionsResponse.msg"
  "msg/ListImageSourcesRequest.msg"
  "msg/ListImageSourcesResponse.msg"
  "msg/ListLeasesRequest.msg"
  "msg/ListLeasesResponse.msg"
  "msg/ListLogpointsRequest.msg"
  "msg/ListLogpointsResponse.msg"
  "msg/ListParam.msg"
  "msg/ListParamSpec.msg"
  "msg/ListPayloadsRequest.msg"
  "msg/ListPayloadsResponse.msg"
  "msg/ListPointCloudSourcesRequest.msg"
  "msg/ListPointCloudSourcesResponse.msg"
  "msg/ListPtzRequest.msg"
  "msg/ListPtzResponse.msg"
  "msg/ListScreensRequest.msg"
  "msg/ListScreensResponse.msg"
  "msg/ListServiceEntriesRequest.msg"
  "msg/ListServiceEntriesResponse.msg"
  "msg/ListSoundsRequest.msg"
  "msg/ListSoundsResponse.msg"
  "msg/ListStoredAlertDataRequest.msg"
  "msg/ListStoredAlertDataResponse.msg"
  "msg/ListStoredDataRequest.msg"
  "msg/ListStoredDataResponse.msg"
  "msg/ListStoredImagesRequest.msg"
  "msg/ListStoredImagesResponse.msg"
  "msg/ListStoredMetadataRequest.msg"
  "msg/ListStoredMetadataResponse.msg"
  "msg/ListWorldObjectRequest.msg"
  "msg/ListWorldObjectResponse.msg"
  "msg/LivePolicy.msg"
  "msg/LoadAutowalkRequest.msg"
  "msg/LoadAutowalkResponse.msg"
  "msg/LoadAutowalkResponseStatus.msg"
  "msg/LoadCellSpotCheckResult.msg"
  "msg/LoadCellSpotCheckResultError.msg"
  "msg/LoadMissionRequest.msg"
  "msg/LoadMissionResponse.msg"
  "msg/LoadMissionResponseStatus.msg"
  "msg/LoadSoundRequest.msg"
  "msg/LoadSoundResponse.msg"
  "msg/LocalGrid.msg"
  "msg/LocalGridCellFormat.msg"
  "msg/LocalGridEncoding.msg"
  "msg/LocalGridExtent.msg"
  "msg/LocalGridRequest.msg"
  "msg/LocalGridResponse.msg"
  "msg/LocalGridResponseStatus.msg"
  "msg/LocalGridType.msg"
  "msg/Localization.msg"
  "msg/LocomotionHint.msg"
  "msg/LogAnnotationLogBlob.msg"
  "msg/LogAnnotationOperatorMessage.msg"
  "msg/LogAnnotationTextMessage.msg"
  "msg/LogAnnotationTextMessageLevel.msg"
  "msg/LogAnnotations.msg"
  "msg/Logpoint.msg"
  "msg/LogpointCalibration.msg"
  "msg/LogpointImageParams.msg"
  "msg/LogpointLogStatus.msg"
  "msg/LogpointQueueStatus.msg"
  "msg/LogpointRecordType.msg"
  "msg/LostDetectorState.msg"
  "msg/ManipulationApiFeedbackRequest.msg"
  "msg/ManipulationApiFeedbackResponse.msg"
  "msg/ManipulationApiRequest.msg"
  "msg/ManipulationApiRequestOneOfManipulationCmd.msg"
  "msg/ManipulationApiResponse.msg"
  "msg/ManipulationCameraSource.msg"
  "msg/ManipulationFeedbackState.msg"
  "msg/ManipulatorState.msg"
  "msg/ManipulatorStateCarryState.msg"
  "msg/ManipulatorStateStowState.msg"
  "msg/Match.msg"
  "msg/Matrix.msg"
  "msg/MatrixInt32.msg"
  "msg/MatrixInt64.msg"
  "msg/Matrixf.msg"
  "msg/MessageTypeDescriptor.msg"
  "msg/Metadata.msg"
  "msg/MissionInfo.msg"
  "msg/MobilityCommand.msg"
  "msg/MobilityCommandFeedback.msg"
  "msg/MobilityCommandFeedbackOneOfFeedback.msg"
  "msg/MobilityCommandRequest.msg"
  "msg/MobilityCommandRequestOneOfCommand.msg"
  "msg/MobilityParams.msg"
  "msg/MobilityParamsStairsMode.msg"
  "msg/ModelData.msg"
  "msg/ModelLabels.msg"
  "msg/ModifyNavigationResponse.msg"
  "msg/ModifyNavigationResponseStatus.msg"
  "msg/ModifyPolicyRequest.msg"
  "msg/ModifyPolicyResponse.msg"
  "msg/ModifyPolicyResponseStatus.msg"
  "msg/MomentOfIntertia.msg"
  "msg/MountFrameName.msg"
  "msg/MutateWorldObjectRequest.msg"
  "msg/MutateWorldObjectRequestAction.msg"
  "msg/MutateWorldObjectRequestMutation.msg"
  "msg/MutateWorldObjectResponse.msg"
  "msg/MutateWorldObjectResponseStatus.msg"
  "msg/NamedArmPositionsCommand.msg"
  "msg/NamedArmPositionsCommandFeedback.msg"
  "msg/NamedArmPositionsCommandFeedbackStatus.msg"
  "msg/NamedArmPositionsCommandPositions.msg"
  "msg/NamedArmPositionsCommandRequest.msg"
  "msg/NavigateRouteRequest.msg"
  "msg/NavigateRouteResponse.msg"
  "msg/NavigateRouteResponseStatus.msg"
  "msg/NavigateToAnchorRequest.msg"
  "msg/NavigateToAnchorResponse.msg"
  "msg/NavigateToAnchorResponseStatus.msg"
  "msg/NavigateToRequest.msg"
  "msg/NavigateToResponse.msg"
  "msg/NavigateToResponseStatus.msg"
  "msg/NavigationFeedbackRequest.msg"
  "msg/NavigationFeedbackResponse.msg"
  "msg/NavigationFeedbackResponseActiveRegionInformation.msg"
  "msg/NavigationFeedbackResponseActiveRegionInformationAreaCallbackStatus.msg"
  "msg/NavigationFeedbackResponseBlockageStatus.msg"
  "msg/NavigationFeedbackResponseRouteFollowingStatus.msg"
  "msg/NavigationFeedbackResponseStatus.msg"
  "msg/NetworkComputeCapability.msg"
  "msg/NetworkComputeCapture.msg"
  "msg/NetworkComputeError.msg"
  "msg/NetworkComputeErrorErrorCode.msg"
  "msg/NetworkComputeInputData.msg"
  "msg/NetworkComputeInputDataOneOfInput.msg"
  "msg/NetworkComputeInputDataRotateImage.msg"
  "msg/NetworkComputeRequest.msg"
  "msg/NetworkComputeResponse.msg"
  "msg/NetworkComputeServerConfiguration.msg"
  "msg/NetworkComputeStatus.msg"
  "msg/NetworkTuple.msg"
  "msg/NoGoRegionProperties.msg"
  "msg/NoGoRegionPropertiesOneOfRegion.msg"
  "msg/Node.msg"
  "msg/NodeIdentifier.msg"
  "msg/NodeInfo.msg"
  "msg/NodeOneOfType.msg"
  "msg/ObstacleParams.msg"
  "msg/OpenDoorCommandRequest.msg"
  "msg/OpenDoorCommandResponse.msg"
  "msg/OpenDoorCommandResponseStatus.msg"
  "msg/OpenDoorFeedbackRequest.msg"
  "msg/OpenDoorFeedbackResponse.msg"
  "msg/OperatorComment.msg"
  "msg/OutputData.msg"
  "msg/OutputImage.msg"
  "msg/PageInfo.msg"
  "msg/PageInfoCompression.msg"
  "msg/PageInfoPageFormat.msg"
  "msg/PagesAndTimestamp.msg"
  "msg/ParallelAnd.msg"
  "msg/Parameter.msg"
  "msg/ParameterOneOfValues.msg"
  "msg/Params.msg"
  "msg/PauseMissionRequest.msg"
  "msg/PauseMissionResponse.msg"
  "msg/PauseMissionResponseStatus.msg"
  "msg/Payload.msg"
  "msg/PayloadCheckResult.msg"
  "msg/PayloadCheckResultError.msg"
  "msg/PayloadCredentials.msg"
  "msg/PayloadEstimationCommand.msg"
  "msg/PayloadEstimationCommandFeedback.msg"
  "msg/PayloadEstimationCommandFeedbackError.msg"
  "msg/PayloadEstimationCommandFeedbackStatus.msg"
  "msg/PayloadEstimationCommandRequest.msg"
  "msg/PayloadMassVolumeProperties.msg"
  "msg/PayloadPreset.msg"
  "msg/PickObject.msg"
  "msg/PickObjectExecutePlan.msg"
  "msg/PickObjectInImage.msg"
  "msg/PickObjectRayInWorld.msg"
  "msg/Plane.msg"
  "msg/PlayMissionRequest.msg"
  "msg/PlayMissionResponse.msg"
  "msg/PlayMissionResponseStatus.msg"
  "msg/PlaySettings.msg"
  "msg/PlaySoundRequest.msg"
  "msg/PlaySoundResponse.msg"
  "msg/PlaybackMode.msg"
  "msg/PlaybackModeContinuous.msg"
  "msg/PlaybackModeOnce.msg"
  "msg/PlaybackModeOneOfMode.msg"
  "msg/PlaybackModePeriodic.msg"
  "msg/PluginServiceError.msg"
  "msg/PluginServiceErrorErrorCode.msg"
  "msg/PodTypeDescriptor.msg"
  "msg/PodTypeEnum.msg"
  "msg/PointCloud.msg"
  "msg/PointCloudEncoding.msg"
  "msg/PointCloudEncodingParameters.msg"
  "msg/PointCloudRequest.msg"
  "msg/PointCloudResponse.msg"
  "msg/PointCloudResponseStatus.msg"
  "msg/PointCloudSource.msg"
  "msg/Policy.msg"
  "msg/PolyLine.msg"
  "msg/Polygon.msg"
  "msg/PolygonWithExclusions.msg"
  "msg/PoseBounds.msg"
  "msg/PositionalInterpolation.msg"
  "msg/PowerCommandFeedbackRequest.msg"
  "msg/PowerCommandFeedbackResponse.msg"
  "msg/PowerCommandRequest.msg"
  "msg/PowerCommandRequestRequest.msg"
  "msg/PowerCommandResponse.msg"
  "msg/PowerCommandStatus.msg"
  "msg/PowerState.msg"
  "msg/PowerStateMotorPowerState.msg"
  "msg/PowerStatePayloadPortsPowerState.msg"
  "msg/PowerStateRobotPowerState.msg"
  "msg/PowerStateShorePowerState.msg"
  "msg/PowerStateWifiRadioPowerState.msg"
  "msg/PowerStatus.msg"
  "msg/PrepPoseBehavior.msg"
  "msg/PressureEnum.msg"
  "msg/ProcessAnchoringRequest.msg"
  "msg/ProcessAnchoringRequestParams.msg"
  "msg/ProcessAnchoringRequestParamsMeasurementParams.msg"
  "msg/ProcessAnchoringRequestParamsOptimizerParams.msg"
  "msg/ProcessAnchoringRequestParamsWeights.msg"
  "msg/ProcessAnchoringResponse.msg"
  "msg/ProcessAnchoringResponseStatus.msg"
  "msg/ProcessTopologyRequest.msg"
  "msg/ProcessTopologyRequestCollisionCheckingParams.msg"
  "msg/ProcessTopologyRequestFiducialLoopClosureParams.msg"
  "msg/ProcessTopologyRequestICPParams.msg"
  "msg/ProcessTopologyRequestOdometryLoopClosureParams.msg"
  "msg/ProcessTopologyRequestParams.msg"
  "msg/ProcessTopologyResponse.msg"
  "msg/ProcessTopologyResponseStatus.msg"
  "msg/Prompt.msg"
  "msg/PromptOption.msg"
  "msg/PtzDescription.msg"
  "msg/PtzDescriptionLimits.msg"
  "msg/PtzFocusState.msg"
  "msg/PtzFocusStatePtzFocusMode.msg"
  "msg/PtzPosition.msg"
  "msg/PtzVelocity.msg"
  "msg/Quad.msg"
  "msg/Quaternion.msg"
  "msg/Question.msg"
  "msg/Ray.msg"
  "msg/RayIntersection.msg"
  "msg/RayIntersectionType.msg"
  "msg/RayProperties.msg"
  "msg/RaycastRequest.msg"
  "msg/RaycastResponse.msg"
  "msg/RaycastResponseStatus.msg"
  "msg/RecordDataBlobsRequest.msg"
  "msg/RecordDataBlobsResponse.msg"
  "msg/RecordDataBlobsResponseError.msg"
  "msg/RecordDataBlobsResponseErrorType.msg"
  "msg/RecordEventsRequest.msg"
  "msg/RecordEventsResponse.msg"
  "msg/RecordEventsResponseError.msg"
  "msg/RecordEventsResponseErrorType.msg"
  "msg/RecordOperatorCommentsRequest.msg"
  "msg/RecordOperatorCommentsResponse.msg"
  "msg/RecordOperatorCommentsResponseError.msg"
  "msg/RecordOperatorCommentsResponseErrorType.msg"
  "msg/RecordSignalTicksRequest.msg"
  "msg/RecordSignalTicksResponse.msg"
  "msg/RecordSignalTicksResponseError.msg"
  "msg/RecordSignalTicksResponseErrorType.msg"
  "msg/RecordTextMessagesRequest.msg"
  "msg/RecordTextMessagesResponse.msg"
  "msg/RecordTextMessagesResponseError.msg"
  "msg/RecordTextMessagesResponseErrorType.msg"
  "msg/RecordingEnvironment.msg"
  "msg/RectangleI.msg"
  "msg/RegionInformation.msg"
  "msg/RegionOfInterestParam.msg"
  "msg/RegionOfInterestParamServiceAndSource.msg"
  "msg/RegionOfInterestParamSpec.msg"
  "msg/RegisterEstopEndpointRequest.msg"
  "msg/RegisterEstopEndpointResponse.msg"
  "msg/RegisterEstopEndpointResponseStatus.msg"
  "msg/RegisterPayloadRequest.msg"
  "msg/RegisterPayloadResponse.msg"
  "msg/RegisterPayloadResponseStatus.msg"
  "msg/RegisterServiceRequest.msg"
  "msg/RegisterServiceResponse.msg"
  "msg/RegisterServiceResponseStatus.msg"
  "msg/RegisterSignalSchemaRequest.msg"
  "msg/RegisterSignalSchemaResponse.msg"
  "msg/RemoteGrpc.msg"
  "msg/RemotePointCloudStatus.msg"
  "msg/Repeat.msg"
  "msg/RequestHeader.msg"
  "msg/ResourceTree.msg"
  "msg/ResponseHeader.msg"
  "msg/RestartMissionRequest.msg"
  "msg/RestartMissionResponse.msg"
  "msg/RestartMissionResponseStatus.msg"
  "msg/RestartWhenPaused.msg"
  "msg/Result.msg"
  "msg/RetainLease.msg"
  "msg/RetainLeaseRequest.msg"
  "msg/RetainLeaseResponse.msg"
  "msg/RetrieveRawDataRequest.msg"
  "msg/RetrieveRawDataResponse.msg"
  "msg/RetrieveRequest.msg"
  "msg/RetrieveResponse.msg"
  "msg/Retry.msg"
  "msg/ReturnLeaseRequest.msg"
  "msg/ReturnLeaseResponse.msg"
  "msg/ReturnLeaseResponseStatus.msg"
  "msg/RobotCommand.msg"
  "msg/RobotCommandFeedback.msg"
  "msg/RobotCommandFeedbackOneOfCommand.msg"
  "msg/RobotCommandFeedbackRequest.msg"
  "msg/RobotCommandFeedbackResponse.msg"
  "msg/RobotCommandFeedbackResponseStatus.msg"
  "msg/RobotCommandFeedbackStatus.msg"
  "msg/RobotCommandFeedbackStatusStatus.msg"
  "msg/RobotCommandOneOfCommand.msg"
  "msg/RobotCommandRequest.msg"
  "msg/RobotCommandResponse.msg"
  "msg/RobotCommandResponseStatus.msg"
  "msg/RobotHardwareConfigurationRequest.msg"
  "msg/RobotHardwareConfigurationResponse.msg"
  "msg/RobotId.msg"
  "msg/RobotIdRequest.msg"
  "msg/RobotIdResponse.msg"
  "msg/RobotImpairedState.msg"
  "msg/RobotImpairedStateImpairedStatus.msg"
  "msg/RobotLinkModelRequest.msg"
  "msg/RobotLinkModelResponse.msg"
  "msg/RobotMetrics.msg"
  "msg/RobotMetricsRequest.msg"
  "msg/RobotMetricsResponse.msg"
  "msg/RobotSoftwareRelease.msg"
  "msg/RobotState.msg"
  "msg/RobotStateRequest.msg"
  "msg/RobotStateResponse.msg"
  "msg/RoiParameters.msg"
  "msg/RoiParametersRoiWindowSize.msg"
  "msg/RotationWithTolerance.msg"
  "msg/Route.msg"
  "msg/RouteFollowingParams.msg"
  "msg/RouteFollowingParamsResumeBehavior.msg"
  "msg/RouteFollowingParamsRouteBlockedBehavior.msg"
  "msg/RouteFollowingParamsStartRouteBehavior.msg"
  "msg/RouteGenParams.msg"
  "msg/SE2Pose.msg"
  "msg/SE2Trajectory.msg"
  "msg/SE2TrajectoryCommand.msg"
  "msg/SE2TrajectoryCommandFeedback.msg"
  "msg/SE2TrajectoryCommandFeedbackBodyMovementStatus.msg"
  "msg/SE2TrajectoryCommandFeedbackStatus.msg"
  "msg/SE2TrajectoryCommandRequest.msg"
  "msg/SE2TrajectoryPoint.msg"
  "msg/SE2Velocity.msg"
  "msg/SE2VelocityCommand.msg"
  "msg/SE2VelocityCommandFeedback.msg"
  "msg/SE2VelocityCommandRequest.msg"
  "msg/SE2VelocityLimit.msg"
  "msg/SE3Covariance.msg"
  "msg/SE3Pose.msg"
  "msg/SE3Trajectory.msg"
  "msg/SE3TrajectoryPoint.msg"
  "msg/SE3Velocity.msg"
  "msg/SafePowerOffCommand.msg"
  "msg/SafePowerOffCommandFeedback.msg"
  "msg/SafePowerOffCommandFeedbackStatus.msg"
  "msg/SafePowerOffCommandRequest.msg"
  "msg/SafePowerOffCommandRequestUnsafeAction.msg"
  "msg/ScalarTrajectory.msg"
  "msg/ScalarTrajectoryPoint.msg"
  "msg/ScreenDescription.msg"
  "msg/Selector.msg"
  "msg/SelfRightCommand.msg"
  "msg/SelfRightCommandFeedback.msg"
  "msg/SelfRightCommandFeedbackStatus.msg"
  "msg/SelfRightCommandRequest.msg"
  "msg/SensorCompatibilityStatus.msg"
  "msg/Sequence.msg"
  "msg/SerializedMessage.msg"
  "msg/SeriesBlockIndex.msg"
  "msg/SeriesBlockIndexBlockEntry.msg"
  "msg/SeriesDescriptor.msg"
  "msg/SeriesDescriptorOneOfDataType.msg"
  "msg/SeriesIdentifier.msg"
  "msg/ServiceEntry.msg"
  "msg/ServiceEntryOneOfServiceType.msg"
  "msg/ServiceFault.msg"
  "msg/ServiceFaultId.msg"
  "msg/ServiceFaultSeverity.msg"
  "msg/ServiceFaultState.msg"
  "msg/SetAudioCaptureChannelRequest.msg"
  "msg/SetAudioCaptureChannelResponse.msg"
  "msg/SetAudioCaptureGainRequest.msg"
  "msg/SetAudioCaptureGainResponse.msg"
  "msg/SetBlackboard.msg"
  "msg/SetEstopConfigRequest.msg"
  "msg/SetEstopConfigResponse.msg"
  "msg/SetEstopConfigResponseStatus.msg"
  "msg/SetGripperCameraParams.msg"
  "msg/SetGripperCameraParamsOneOfParams.msg"
  "msg/SetICEConfigurationRequest.msg"
  "msg/SetICEConfigurationResponse.msg"
  "msg/SetIrColormapRequest.msg"
  "msg/SetIrColormapResponse.msg"
  "msg/SetIrMeterOverlayRequest.msg"
  "msg/SetIrMeterOverlayResponse.msg"
  "msg/SetLEDBrightnessRequest.msg"
  "msg/SetLEDBrightnessResponse.msg"
  "msg/SetLocalizationRequest.msg"
  "msg/SetLocalizationRequestFiducialInit.msg"
  "msg/SetLocalizationRequestOneOfRefinement.msg"
  "msg/SetLocalizationResponse.msg"
  "msg/SetLocalizationResponseQualityCheckResult.msg"
  "msg/SetLocalizationResponseStatus.msg"
  "msg/SetLocalizationResponseSuspectedAmbiguity.msg"
  "msg/SetPassphraseRequest.msg"
  "msg/SetPassphraseResponse.msg"
  "msg/SetPowerStatusRequest.msg"
  "msg/SetPowerStatusResponse.msg"
  "msg/SetPtzFocusStateRequest.msg"
  "msg/SetPtzFocusStateResponse.msg"
  "msg/SetPtzPositionRequest.msg"
  "msg/SetPtzPositionResponse.msg"
  "msg/SetPtzVelocityRequest.msg"
  "msg/SetPtzVelocityResponse.msg"
  "msg/SetRecordingEnvironmentRequest.msg"
  "msg/SetRecordingEnvironmentResponse.msg"
  "msg/SetScreenRequest.msg"
  "msg/SetScreenResponse.msg"
  "msg/SetStreamParamsRequest.msg"
  "msg/SetStreamParamsResponse.msg"
  "msg/SetVolumeRequest.msg"
  "msg/SetVolumeResponse.msg"
  "msg/SignalSchema.msg"
  "msg/SignalSchemaId.msg"
  "msg/SignalSchemaVariable.msg"
  "msg/SignalSchemaVariableType.msg"
  "msg/SignalTick.msg"
  "msg/SignalTickEncoding.msg"
  "msg/SimpleParallel.msg"
  "msg/SitCommand.msg"
  "msg/SitCommandFeedback.msg"
  "msg/SitCommandFeedbackStatus.msg"
  "msg/SitCommandRequest.msg"
  "msg/Skeleton.msg"
  "msg/SkeletonLink.msg"
  "msg/SkeletonLinkObjModel.msg"
  "msg/Sleep.msg"
  "msg/SoftwareVersion.msg"
  "msg/Sound.msg"
  "msg/SpotCamLed.msg"
  "msg/SpotCamPtz.msg"
  "msg/SpotCamPtzAdjustParameters.msg"
  "msg/SpotCamResetAutofocus.msg"
  "msg/SpotCamStoreMedia.msg"
  "msg/SpotCheckCommandRequest.msg"
  "msg/SpotCheckCommandRequestCommand.msg"
  "msg/SpotCheckCommandResponse.msg"
  "msg/SpotCheckCommandResponseStatus.msg"
  "msg/SpotCheckFeedbackRequest.msg"
  "msg/SpotCheckFeedbackResponse.msg"
  "msg/SpotCheckFeedbackResponseError.msg"
  "msg/SpotCheckFeedbackResponseState.msg"
  "msg/SqueezeGrasp.msg"
  "msg/StairTransform.msg"
  "msg/Stance.msg"
  "msg/StanceCommand.msg"
  "msg/StanceCommandFeedback.msg"
  "msg/StanceCommandFeedbackStatus.msg"
  "msg/StanceCommandRequest.msg"
  "msg/StandCommand.msg"
  "msg/StandCommandFeedback.msg"
  "msg/StandCommandFeedbackStandingState.msg"
  "msg/StandCommandFeedbackStatus.msg"
  "msg/StandCommandRequest.msg"
  "msg/StartRecordingRequest.msg"
  "msg/StartRecordingResponse.msg"
  "msg/StartRecordingResponseStatus.msg"
  "msg/StartRequest.msg"
  "msg/StartResponse.msg"
  "msg/StartResponseStatus.msg"
  "msg/State.msg"
  "msg/StateAnsweredQuestion.msg"
  "msg/StateNodeStatesAtTick.msg"
  "msg/StateNodeStatesAtTickNodeState.msg"
  "msg/StateNodeStatesAtTickNodeStateBlackboardState.msg"
  "msg/StateStatus.msg"
  "msg/StopCommand.msg"
  "msg/StopCommandFeedback.msg"
  "msg/StopCommandRequest.msg"
  "msg/StopMissionRequest.msg"
  "msg/StopMissionResponse.msg"
  "msg/StopMissionResponseStatus.msg"
  "msg/StopRecordingRequest.msg"
  "msg/StopRecordingResponse.msg"
  "msg/StopRecordingResponseStatus.msg"
  "msg/StopRequest.msg"
  "msg/StopResponse.msg"
  "msg/StopResponseStatus.msg"
  "msg/StopSoundRequest.msg"
  "msg/StopSoundResponse.msg"
  "msg/StoreAlertDataRequest.msg"
  "msg/StoreAlertDataResponse.msg"
  "msg/StoreDataRequest.msg"
  "msg/StoreDataResponse.msg"
  "msg/StoreImageRequest.msg"
  "msg/StoreImageResponse.msg"
  "msg/StoreMetadata.msg"
  "msg/StoreMetadataOneOfData.msg"
  "msg/StoreMetadataRequest.msg"
  "msg/StoreMetadataResponse.msg"
  "msg/StoreRequest.msg"
  "msg/StoreResponse.msg"
  "msg/StraightStaircase.msg"
  "msg/StraightStaircaseLanding.msg"
  "msg/StraightStaircaseOneOfLocation.msg"
  "msg/StraightStaircaseStair.msg"
  "msg/StreamParams.msg"
  "msg/StreamParamsAutoExposure.msg"
  "msg/StreamParamsAwbMode.msg"
  "msg/StreamParamsAwbModeEnum.msg"
  "msg/StreamParamsManualExposure.msg"
  "msg/StreamParamsOneOfExposure.msg"
  "msg/StreamParamsSyncAutoExposure.msg"
  "msg/StringParam.msg"
  "msg/StringParamSpec.msg"
  "msg/StructTypeDescriptor.msg"
  "msg/SwingHeight.msg"
  "msg/Switch.msg"
  "msg/SynchronizedCommand.msg"
  "msg/SynchronizedCommandFeedback.msg"
  "msg/SynchronizedCommandRequest.msg"
  "msg/SystemFault.msg"
  "msg/SystemFaultSeverity.msg"
  "msg/SystemFaultState.msg"
  "msg/TagRequest.msg"
  "msg/TagResponse.msg"
  "msg/TakeLeaseRequest.msg"
  "msg/TakeLeaseResponse.msg"
  "msg/TakeLeaseResponseStatus.msg"
  "msg/Target.msg"
  "msg/TargetNavigateRoute.msg"
  "msg/TargetNavigateTo.msg"
  "msg/TargetOneOfTarget.msg"
  "msg/TargetRelocalize.msg"
  "msg/TeardownSessionRequest.msg"
  "msg/TeardownSessionResponse.msg"
  "msg/TeardownSessionResponseStatus.msg"
  "msg/Temperature.msg"
  "msg/TemperatureEnum.msg"
  "msg/TerrainParams.msg"
  "msg/TerrainParamsGratedSurfacesMode.msg"
  "msg/TerrainState.msg"
  "msg/TextMessage.msg"
  "msg/TextMessageLevel.msg"
  "msg/TickRequest.msg"
  "msg/TickResponse.msg"
  "msg/TickResponseStatus.msg"
  "msg/TimeRange.msg"
  "msg/TimeRangeQuery.msg"
  "msg/TimeSyncEstimate.msg"
  "msg/TimeSyncRoundTrip.msg"
  "msg/TimeSyncState.msg"
  "msg/TimeSyncStateStatus.msg"
  "msg/TimeSyncUpdateRequest.msg"
  "msg/TimeSyncUpdateResponse.msg"
  "msg/TravelParams.msg"
  "msg/TravelParamsFeatureQualityTolerance.msg"
  "msg/TriggerServiceFaultRequest.msg"
  "msg/TriggerServiceFaultResponse.msg"
  "msg/TriggerServiceFaultResponseStatus.msg"
  "msg/Units.msg"
  "msg/UnitsOneOfUnits.msg"
  "msg/UnregisterServiceRequest.msg"
  "msg/UnregisterServiceResponse.msg"
  "msg/UnregisterServiceResponseStatus.msg"
  "msg/UpdateCallbackRequest.msg"
  "msg/UpdateCallbackRequestStage.msg"
  "msg/UpdateCallbackResponse.msg"
  "msg/UpdateCallbackResponseComplete.msg"
  "msg/UpdateCallbackResponseError.msg"
  "msg/UpdateCallbackResponseErrorErrorType.msg"
  "msg/UpdateCallbackResponseNavPolicy.msg"
  "msg/UpdateCallbackResponseNavPolicyOption.msg"
  "msg/UpdateCallbackResponseOneOfResponse.msg"
  "msg/UpdateCallbackResponseStatus.msg"
  "msg/UpdateCallbackResponseUpdateLocalization.msg"
  "msg/UpdateCallbackResponseUpdateLocalizationLocalizationChange.msg"
  "msg/UpdateDockingParams.msg"
  "msg/UpdatePayloadAttachedRequest.msg"
  "msg/UpdatePayloadAttachedRequestRequest.msg"
  "msg/UpdatePayloadAttachedResponse.msg"
  "msg/UpdatePayloadAttachedResponseStatus.msg"
  "msg/UpdatePayloadVersionRequest.msg"
  "msg/UpdatePayloadVersionResponse.msg"
  "msg/UpdatePayloadVersionResponseStatus.msg"
  "msg/UpdateServiceRequest.msg"
  "msg/UpdateServiceResponse.msg"
  "msg/UpdateServiceResponseStatus.msg"
  "msg/UploadEdgeSnapshotRequest.msg"
  "msg/UploadEdgeSnapshotResponse.msg"
  "msg/UploadGraphRequest.msg"
  "msg/UploadGraphResponse.msg"
  "msg/UploadGraphResponseStatus.msg"
  "msg/UploadWaypointSnapshotRequest.msg"
  "msg/UploadWaypointSnapshotResponse.msg"
  "msg/UploadWaypointSnapshotResponseStatus.msg"
  "msg/UserData.msg"
  "msg/ValidateGraphRequest.msg"
  "msg/ValidateGraphResponse.msg"
  "msg/ValidateGraphResponseStatus.msg"
  "msg/Value.msg"
  "msg/ValueOneOfSource.msg"
  "msg/VariableDeclaration.msg"
  "msg/VariableDeclarationType.msg"
  "msg/Vec2.msg"
  "msg/Vec2Value.msg"
  "msg/Vec3.msg"
  "msg/Vec3Trajectory.msg"
  "msg/Vec3TrajectoryPoint.msg"
  "msg/Vec3Value.msg"
  "msg/Vector.msg"
  "msg/VectorAlignmentWithTolerance.msg"
  "msg/VisualRefinementOptions.msg"
  "msg/Volume.msg"
  "msg/VolumeOneOfGeometry.msg"
  "msg/Walk.msg"
  "msg/WalkGazeMode.msg"
  "msg/WalkToObjectInImage.msg"
  "msg/WalkToObjectRayInWorld.msg"
  "msg/Waypoint.msg"
  "msg/WaypointAnchorHint.msg"
  "msg/WaypointAnnotations.msg"
  "msg/WaypointAnnotationsLocalizeRegion.msg"
  "msg/WaypointAnnotationsLocalizeRegionCircle2D.msg"
  "msg/WaypointAnnotationsLocalizeRegionDefault.msg"
  "msg/WaypointAnnotationsLocalizeRegionEmpty.msg"
  "msg/WaypointAnnotationsLocalizeRegionOneOfRegion.msg"
  "msg/WaypointAnnotationsLoopClosureSettings.msg"
  "msg/WaypointSnapshot.msg"
  "msg/WaypointWaypointSource.msg"
  "msg/WiFiState.msg"
  "msg/WiFiStateMode.msg"
  "msg/WifiDevice.msg"
  "msg/WifiDeviceType.msg"
  "msg/WifiStats.msg"
  "msg/WorldObject.msg"
  "msg/WorldObjectAnchorHint.msg"
  "msg/WorldObjectType.msg"
  "msg/Wrench.msg"
  "msg/WrenchTrajectory.msg"
  "msg/WrenchTrajectoryPoint.msg"
  DEPENDENCIES geometry_msgs builtin_interfaces common_interfaces std_msgs sensor_msgs
)

ament_export_dependencies(rosidl_default_runtime)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
